Uploaded image for project: 'Kudu'
  1. Kudu
  2. KUDU-1469

Consensus can get "stuck" after a leader change when committed index is far behind replicated

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Critical
    • Resolution: Fixed
    • 0.8.0
    • 0.9.1, 0.10.0
    • consensus
    • None

    Description

      A YCSB stress test hit a bug whereby a tablet was "stuck" - operations were left in flight for hours/days and no progress could be made, despite a majority of replicas being alive.

      Detailed analysis below.

      Attachments

        Activity

          People

            tlipcon Todd Lipcon
            tlipcon Todd Lipcon
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: